--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,35 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_search">
+    app:startDestination="@+id/search_dest">
 
     <fragment
-        android:id="@+id/navigation_search"
+        android:id="@+id/search_dest"
         android:name="com.example.stablediffuser.ui.search.SearchFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_search" >
+        tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_navigation_search_to_navigation_mosaic"
-            app:destination="@id/navigation_mosaic" />
+            app:destination="@id/mosaic_dest" />
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_mosaic"
+        android:id="@+id/mosaic_dest"
         android:name="com.example.stablediffuser.ui.mosaic.MosaicFragment"
         android:label="@string/title_mosaic"
-        tools:layout="@layout/fragment_mosaic" >
+        tools:layout="@layout/fragment_mosaic">
         <action
             android:id="@+id/action_navigation_mosaic_to_navigation_art"
-            app:destination="@id/navigation_art" />
+            app:destination="@id/art_dest" />
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_art"
+        android:id="@+id/art_dest"
         android:name="com.example.stablediffuser.ui.art.ArtFragment"
         android:label="@string/title_art"
-        tools:layout="@layout/fragment_art" >
+        tools:layout="@layout/fragment_art">
         <action
             android:id="@+id/action_navigation_art_to_navigation_mosaic"
-            app:destination="@id/navigation_mosaic" />
+            app:destination="@id/mosaic_dest" />
     </fragment>
+
+    <fragment
+        android:id="@+id/dummy_dest"
+        android:name="com.example.stablediffuser.ui.dummy.DummyFragment"
+        android:label="@string/title_mosaic"
+        tools:layout="@layout/fragment_dummy" />
+
 </navigation>
