--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_search"
+        android:id="@+id/search_dest"
         android:icon="@drawable/search"
         android:title="@string/title_search" />
 
     <item
-        android:id="@+id/navigation_mosaic"
+        android:id="@+id/dummy_dest"
         android:icon="@drawable/mosaic"
         android:title="@string/title_mosaic" />
-
-    <item
-        android:id="@+id/navigation_art"
-        android:icon="@drawable/palette"
-        android:title="@string/title_art" />
 
 </menu>
