--- a/app/src/main/res/layout/fragment_mosaic.xml
+++ b/app/src/main/res/layout/fragment_mosaic.xml
@@ -14,6 +14,13 @@
         android:layout_height="match_parent"
         tools:context=".ui.mosaic.MosaicFragment">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:itemBinding="@{viewModel.itemBinding}"
+            app:items="@{viewModel.items}"
+            app:spanCount="@{3}" />
+
         <TextView
             android:id="@+id/text_mosaic"
             android:layout_width="match_parent"
