--- a/app/src/main/res/layout/item_mosaic_cell.xml
+++ b/app/src/main/res/layout/item_mosaic_cell.xml
@@ -14,12 +14,13 @@
         android:layout_height="wrap_content"
         android:background="@color/teal_200"
         android:elevation="6dp"
-        android:padding="2dp">
+        android:padding="1dp">
 
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:background="@android:color/white"
+            android:layout_gravity="center"
+            android:background="@color/teal_700"
             android:foreground="?android:attr/selectableItemBackground"
             android:onClickListener="@{viewModel.onShowArt}"
             android:scaleType="fitCenter"
