--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -14,6 +14,16 @@
         android:layout_height="match_parent"
         tools:context=".ui.art.ArtFragment">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/black"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:scaleType="fitCenter"
+            android:src="@{viewModel.imageUrl}"
+            tools:src="@drawable/palette" />
+
         <TextView
             android:id="@+id/text_art"
             android:layout_width="match_parent"
