--- a/app/src/main/res/layout/item_mosaic_cell.xml
+++ b/app/src/main/res/layout/item_mosaic_cell.xml
@@ -20,7 +20,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:background="@color/teal_700"
+            android:background="@color/black"
             android:foreground="?android:attr/selectableItemBackground"
             android:onClickListener="@{viewModel.onShowArt}"
             android:scaleType="fitCenter"
