--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -22,6 +22,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:scaleType="fitCenter"
             android:src="@{viewModel.imageUrl}"
+            tools:background="@color/teal_200"
             tools:src="@drawable/palette" />
 
         <Button
@@ -30,10 +31,49 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="27dp"
             android:onClickListener="@{viewModel.onShowMosaic}"
-            android:text="More of the same"
+            android:text="@string/show_more"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/info_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClickListener="@{viewModel.onToggleInfo}"
+            android:src="@drawable/info"
+            app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
+            app:layout_constraintEnd_toStartOf="@id/mosaic_button"
+            app:layout_constraintTop_toTopOf="@id/mosaic_button" />
+
+        <ImageView
+            android:id="@+id/share_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:src="@drawable/sharing"
+            app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
+            app:layout_constraintStart_toEndOf="@id/mosaic_button"
+            app:layout_constraintTop_toTopOf="@id/mosaic_button" />
+
+        <TextView
+            android:id="@+id/info_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#99000000"
+            android:padding="10dp"
+            android:text="@{viewModel.prompt}"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@id/info_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:visible="@{viewModel.showPrompt}"
+            tools:text="dsjfiodsjfoi ldfmn fiodsjf  ofjdskfmfn sldfmn fiodsjfo mfnd ksldfmn " />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
