--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -12,6 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         tools:context=".ui.art.ArtFragment">
 
         <ImageView
@@ -41,8 +43,9 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
+            android:elevation="6dp"
             android:foreground="?android:attr/selectableItemBackground"
-            android:onClickListener="@{viewModel.onToggleInfo}"
+            android:onClickListener="@{viewModel.onTogglePrompt}"
             android:src="@drawable/info"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintEnd_toStartOf="@id/mosaic_button"
@@ -53,6 +56,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="20dp"
+            android:elevation="6dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:src="@drawable/sharing"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
@@ -66,6 +70,9 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="20dp"
             android:background="#99000000"
+            android:elevation="6dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClickListener="@{viewModel.onSharePrompt}"
             android:padding="10dp"
             android:text="@{viewModel.prompt}"
             android:textColor="@android:color/white"
