--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,16 +14,13 @@
         android:layout_height="match_parent"
         tools:context=".ui.search.SearchFragment">
 
-        <TextView
-            android:id="@+id/text_search"
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="@{viewModel.title}"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="@string/search_box_hint"
+            android:paddingHorizontal="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +30,13 @@
             android:id="@+id/mosaic_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:enabled="@{viewModel.isSearchEnabled}"
             android:onClickListener="@{viewModel.onShowMosaic}"
-            android:text="Mosaic"
+            android:text="Search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_search" />
+            app:layout_constraintTop_toBottomOf="@id/search_box" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
