--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,11 +20,25 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:hint="@string/search_box_hint"
-            android:paddingHorizontal="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/clear_button"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:adjustViewBounds="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:onClickListener="@{viewModel.onClearSearch}"
+            android:src="@drawable/cancel"
+            app:layout_constraintBottom_toBottomOf="@id/search_box"
+            app:layout_constraintEnd_toEndOf="@id/search_box"
+            app:layout_constraintTop_toTopOf="@id/search_box"
+            app:visible="@{viewModel.isClearVisible}" />
 
         <Button
             android:id="@+id/mosaic_button"
