--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -64,7 +64,7 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:text="@string/recent_searches"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mosaic_button" />
 
@@ -74,6 +74,7 @@
             android:layout_height="0dp"
             android:clipChildren="false"
             android:clipToPadding="false"
+            android:requiresFadingEdge="vertical"
             app:itemBinding="@{viewModel.itemBinding}"
             app:items="@{viewModel.items}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
