--- a/app/src/main/res/layout/item_search_query.xml
+++ b/app/src/main/res/layout/item_search_query.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="@color/teal_700"
         android:foreground="?android:attr/selectableItemBackground"
         android:onClickListener="@{viewModel.onLoadQuery}"
         app:cardCornerRadius="6dp"
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="@{viewModel.query}"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             tools:text="sahdjfshfkjdshfjdsjfdsjfhdjshfdsnfjdnsjkfnbdsjkfndsjfnsdjfnjdsfnjdsfnjkdsnfjdsnfjkdnsfkjnsdjfn" />
 
