--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,6 +23,8 @@
             android:hint="@string/search_box_hint"
             android:paddingStart="10dp"
             android:paddingEnd="30dp"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/darker_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,14 +44,17 @@
             app:layout_constraintTop_toTopOf="@id/search_box"
             app:visible="@{viewModel.isClearVisible}" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/mosaic_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:background="@drawable/search_button_background"
+            android:elevation="6dp"
             android:enabled="@{viewModel.isSearchEnabled}"
             android:onClickListener="@{viewModel.onShowMosaic}"
             android:text="@string/search"
+            android:textColor="@color/search_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_box"
