--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -17,7 +17,7 @@
         android:clipToPadding="false"
         tools:context=".ui.art.ArtFragment">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
