--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -17,14 +17,14 @@
         android:clipToPadding="false"
         tools:context=".ui.art.ArtFragment">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.example.stablediffuser.utils.ZoomImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@color/black"
-            android:onClickListener="@{viewModel.onTogglePrompt}"
             android:scaleType="fitCenter"
             android:src="@{viewModel.imageUrl}"
+            app:onSingleTap="@{viewModel.onTogglePrompt}"
             app:thumbSrc="@{viewModel.thumbUrl}"
             tools:background="@color/teal_200"
             tools:src="@drawable/palette" />
@@ -46,10 +46,9 @@
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
             android:elevation="6dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:onClickListener="@{viewModel.onTogglePrompt}"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:padding="10dp"
-            android:src="@drawable/info"
+            android:src="@drawable/favorite"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintEnd_toStartOf="@id/mosaic_button"
             app:layout_constraintTop_toTopOf="@id/mosaic_button" />
@@ -60,7 +59,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:elevation="6dp"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:onClickListener="@{viewModel.onShareUrl}"
             android:padding="10dp"
             android:src="@drawable/sharing"
