--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,8 +7,8 @@
         android:title="@string/title_search" />
 
     <item
-        android:id="@+id/dummy_dest"
-        android:icon="@drawable/mosaic"
-        android:title="@string/title_mosaic" />
+        android:id="@+id/favorites_dest"
+        android:icon="@drawable/favorite_tinted"
+        android:title="@string/title_favorites" />
 
 </menu>
