--- a/app/src/main/res/layout/sheet_retry_later.xml
+++ b/app/src/main/res/layout/sheet_retry_later.xml
@@ -4,26 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/retry_sheet_background"
+        android:gravity="center"
+        android:orientation="vertical"
         android:paddingHorizontal="50dp"
         android:paddingVertical="100dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/eco" />
 
         <TextView
             android:id="@+id/sheet_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
-            tools:text="Please retry later" />
+            tools:text="Please retry later Please retry later Please retry later Please" />
 
-    </FrameLayout>
+    </LinearLayout>
 
 </FrameLayout>
