--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -48,7 +48,7 @@
             android:elevation="6dp"
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:padding="10dp"
-            android:src="@drawable/favorite"
+            android:src="@drawable/favorite_filled"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintEnd_toStartOf="@id/mosaic_button"
             app:layout_constraintTop_toTopOf="@id/mosaic_button" />
