--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,6 +44,11 @@
         tools:layout="@layout/fragment_art">
 
         <argument
+            android:name="artId"
+            android:defaultValue="invalid"
+            app:argType="string" />
+
+        <argument
             android:name="artUrl"
             android:defaultValue="invalid"
             app:argType="string" />
