--- a/app/src/main/res/layout/item_mosaic_cell.xml
+++ b/app/src/main/res/layout/item_mosaic_cell.xml
@@ -26,7 +26,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:onClickListener="@{viewModel.onShowArt}"
             android:scaleType="fitCenter"
-            android:src="@{viewModel.imageUrl}"
+            android:src="@{viewModel.artData.url}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
             android:src="@drawable/warning"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{viewModel.hasWarning}" />
+            app:visible="@{viewModel.artData.nsfw}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
