--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -53,7 +53,7 @@
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintEnd_toStartOf="@id/mosaic_button"
             app:layout_constraintTop_toTopOf="@id/mosaic_button"
-            app:selected="@{viewModel.isFavorite}" />
+            app:selected="@{viewModel.showAsFavorite}" />
 
         <ImageView
             android:id="@+id/share_button"
